@@ -94,7 +94,6 @@ Dist::Zilla::Plugin::InsertExample             = 0.09
 Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
 Dist::Zilla::Plugin::MathInt64                 = 0.10
 Dist::Zilla::Plugin::OurPkgVersion             = 0.12
-Dist::Zilla::Plugin::Template::Tiny            = 0.04
 Dist::Zilla::Plugin::Test::Version             = 1.09
 Dist::Zilla::Plugin::TextTabs                  = 0.04
 Dist::Zilla::PluginBundle::Author::Plicease    = 2.21
